[build-system]
requires = ["hatchling", "numpy", "torch"]
build-backend = "hatchling.build"

[project]
name = "ezkl"
version = "0.0.2"
authors = [
  { name="Jason Morton", email="jason@zkonduit.com" },
  { name="Dante Camuto", email="jason@zkonduit.com" },    
]
description = "Easy zero-knowledge learning in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zkonduit/pyezkl"
"Bug Tracker" = "https://github.com/zkonduit/pyezkl/issues"
